# RXMD

./: .gitignore  CMakeLists.txt  H.20t-20t.nn  H.model_scripted.pt  Makefile  Makefile.inc  N.20t-20t.nn  N.model_scripted.pt  O.20t-20t.nn  O.model_scripted.pt  Pb.20t-20t.nn  Pb.model_scripted.pt  README.md  Ti.20t-20t.nn  Ti.20t-20t.nn-00005_asc  Ti.model_scripted.pt  build.sh  conv.py  ffield  fnn.in  fnn.in.sic  harmopot.in  input.xyz  input.xyz2  make.inc  make.inc_example  net_O.pt  net_Pb.pt  net_Ti.pt  nn.pt  nnmm.in  rxmd.in  rxmdnn.in  set_flags_pgi.sh  shortrep.in  sic_jax.json
CMake/: IntelSYCLConfig-modified.cmake
DAT/: x_w_2_256_512.net  y_b_2_512.net
FNN/Al/: b_1_256.y  b_2_512.z  b_3_256.x  b_3_256.y  b_3_256.z  w_1_27_256.x  w_1_27_256.y  w_3_512_256.y  w_3_512_256.z  w_4_256_1.y
aenet/: .predict.in.swp  O.20t-20t.nn  O.20t-20t.nn-00500_asc  Pb.20t-20t.nn  Pb.20t-20t.nn-00500_asc  Ti.20t-20t.nn  Ti.20t-20t.nn-00500_asc  predict.in
aenet/frc_files/: 000.xsf  010.xsf  020.xsf  030.xsf  040.xsf  050.xsf  060.xsf  070.xsf  080.xsf  090.xsf  100.xsf  110.xsf  120.xsf  130.xsf  140.xsf  150.xsf  160.xsf  170.xsf  180.xsf  190.xsf  200.xsf  210.xsf  220.xsf  230.xsf  240.xsf  250.xsf  260.xsf  270.xsf  280.xsf  290.xsf  300.xsf  310.xsf  320.xsf  330.xsf  340.xsf  350.xsf  360.xsf  370.xsf  380.xsf  390.xsf  (+10 more)
conf/bg-bench/init/: geninit.F90
conf/init.a-polys/: PE.xyz  PP.xyz
conf/init.aloslab/: aloslab.xtl  ffield.reax
conf/init.fes/: pyrite.xyz
conf/init.gst/: input.xyz
conf/init.mos2.ortho/: norm.xyz
conf/init.pe.pqeq/: polyethylene.xyz
conf/init.pvdf/: pvdf-delta.cif
conf/init.rdx/: input.xyz
conf/init.rdx.lg/: input.xyz
conf/init.sicnp/: input.xyz
conf/init.water/: ffield  ice-1h.xyz
config/: .make_xl.inc.swp  make_example.inc  make_ftn.inc  make_hpc.inc  make_xl.inc
configs/: build_polaris.sh  build_sunspot.sh
doc/: documnetation-v1
doc/BGQProfiling_BobWalkup/: MPI_Wrappers_for_BGQ.odt  README.mpitrace
doc/ReaxFF/: Algebra_Angles.doc  QEq_v01.doc  QEq_v02.docx  rxff-doc.md  rxmd.md
docs/: README.html  RXMDManual.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/ReaxFF/: RXMDManual.html
docs/_sources/: README.md.txt  RXMDManual.md.txt  index.rst.txt
examples/1-reaxff/: Makefile  rxmd.in
examples/2-reaxff-dc/: Makefile  rxmd.in
examples/3-reaxpq+/: Makefile  input.xyz  pqeq1.par  rxmd.in
examples/4-reaxpq+/: rxmd.in
examples/4-reaxpq+-efield/: Makefile
init/: 1pto.xyz  500.xsf  500.xyz  EXPLAT0999.xsf  EXPLAT0999.xsf.xyz  Makefile  fnn.in  frame.test.00000000.xsf  frame.test.00000000.xsf.xyz  geninit  geninit.F90  geninit.py  geninit.xyz  input.xyz  nh3.xyz  nh3_solid.xyz  pto.xyz  rxff.bin-large  rxff.bin-medium  rxff.bin-small  sio2.xyz
init.casioh/: geninit.F90
nn/: AenetParams.cpp  Makefile  O.20t-20t.nn-00005_asc  O.fingerprint.stp  Params.cpp  Pb.fingerprint.stp  Ti.fingerprint.stp  a.out  mk.sh  nh3.xyz  nn.cpp  params.in  rxmdnn.f90  rxmdnn.in
nn/asc_original/: O.20t-20t.nn-00005_asc  Pb.20t-20t.nn-00005_asc  Ti.20t-20t.nn-00005_asc
pot/: H.20t-20t.nn  O.20t-20t.nn  ceparams.in  deployed.pth  psto.pth  shparams.in  spparams.in  ymno3.deploy  ymno3.xyz
pot/16Na_legato/: 16Na-L2.deploy  NaHO_10M.xyz  geninit.xyz  norm.xyz  rxmdnn.in
regtests/FeS/refs/: 000000000.bnd  000000050.bnd  000000100.bnd
regtests/FeS/run/: Makefile
regtests/OldCode/run/: Makefile  (+1 more)
rxmd/: INSTALL.md  Makefile.inc  ffield_lg  make.inc  qsub.sh  run.job  rxmd  rxmd.in  rxmd_knl_t1.cobaltlog  rxmd_knl_t1.error  rxmd_knl_t1.output
rxmd/4_16/: rxmd_knl_t1.error  rxmd_knl_t1.output
rxmd/64_1/: rxmd_knl_t1.cobaltlog  rxmd_knl_t1.error
rxmd/DAT/: 000000000.bnd  000001000.bnd  000002000.bnd  000003000.bnd  000004000.bnd  000005000.bnd  000006000.bnd  000007000.bnd  000008000.bnd  000009000.bnd  000010000.bnd  000011000.bnd  rxff000000  rxff000001  rxff000002  rxff000003  rxff000004  rxff000005  rxff000006  rxff000007
rxmd/cpp/: main.cpp  params.h
rxmd/doc/: Adri_Equations.doc  Algebra_AdditionalTerms.docx
rxmd/init/: FeS-system.xyz  FeS-system_norm.xyz  Makefile  geninit  geninit.F90  geninit.xyz  makefile  params.mod  rxff000000  rxff000001  rxff000002  rxff000003
rxmd/regtests/: run.py
rxmd/results/: OUTPUT_n1_p4_t16_ht1  OUTPUT_n1_p4_t1_ht1  OUTPUT_n1_p4_t2_ht1  OUTPUT_n1_p4_t32_ht2  OUTPUT_n1_p4_t4_ht1  OUTPUT_n1_p4_t8_ht1
rxmd/src/: Basic.cpp  Basic.h  Makefile  atoms.mod  base.mod  bo.F90  cg.F90  cg.mod  comm.F90  cpp_interface.cpp  cpp_interop.cpp  fileio.F90  init.F90  main.F90  makefile  memoryallocator.mod  module.F90  param.F90  parameters.mod  pot.F90  qeq.F90  rxmd.F90  stress  stress.F90
rxmd/unittests/: run.py
rxmd/util/: .cat.sh.swp  BondLifeTime.cpp  cat.sh  check.py  clean.sh  mk.sh  mkdir.sh  setup.sh  staging.sh
rxmdtorch/: CMakeLists.txt  train.py
rxmdtorch/configs/: build_aurora.sh  build_discovery.sh  build_polaris.sh  build_sophia.sh  build_sunspot.sh
rxmdtorch/miniapp/: Makefile  main.cpp  mk.sh  nh3.pth  rxmdnn.f90  rxmdnn.in  rxmdtorch.h
rxmdtorch/src/: rxmdtorch.cpp  torchnn.cpp
rxmdtorch/torchscript/: CMakeLists.txt  build.sh  clean.sh  example-app.cpp  my_module_model.pt  traced_model.py  traced_nn_model.pt
src/: .init.F90.swp  CMakeLists.txt  Makefile  bo.F90  cg.F90  cmdline.F90  comm.F90  constant.F90  dftd.F90  ensembles.F90  fileio.F90  fnn.F90  harmopot.F90  init.F90  init.ps  lists.F90  main.F90  main.ps  memory.F90  module.F90  msd.F90  nnip_modifier.F90  nnmm.F90  nompi.F90  nompi.f90  param.F90  pot.F90  pqeq.F90  qeq.F90  reaxff.F90  remd_pot_ANN_original.F90  rxmd  rxmdnn.F90  shortrep.F90  stepmod.F90  symmfunc.F90  utils.F90  velocity.F90
torch_test/: H.model_scripted.pt  N.model_scripted.pt
util/: fromfile.py  getStack.sh
util/bigstat/: Makefile  main.f90  mpi.f90  stat.f90  voxels.f90
util/forcefield/: ffield_MoOS
util/script/: BondLifeTime.cpp  cat.sh  clean.sh  csv.py  linktype.sh  qsub.sh_ap  run.sh  submit.sh
util/stat/: Makefile  bacmp.py  exec.py  grcmp.py  main.f90  plot.py  stat.f90  voxels.f90
(+154 files in other folders)
